--- a/IWA3/index.html
+++ b/IWA3/index.html
@@ -7,6 +7,9 @@
     <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        console.log("hello world")
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>challange2</title>
